# weather_man

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile  test_tui.sh
.github/workflows/: ci.yml  release.yml
crates/weather_man-core/: Cargo.toml  README.md
crates/weather_man-core/src/: api.rs  forecaster.rs  format.rs  lib.rs  location.rs  presentation.rs  types.rs
crates/weather_man-core/tests/: format_test.rs  mapping_test.rs  presentation_test.rs  types_test.rs
crates/weather_man-gui/: Cargo.toml  README.md
crates/weather_man-gui/examples/vhs/: gui-demo.tape
crates/weather_man-gui/src/: app.rs  lib.rs  main.rs  theme.rs  view.rs
crates/weather_man-tui/: Cargo.toml  README.md
crates/weather_man-tui/examples/vhs/: tui-demo.tape  tui-imperial.tape
crates/weather_man-tui/src/: app.rs  lib.rs  main.rs  view.rs
crates/weather_man-tui/tests/: view_test.rs
crates/weatherman-core/: Cargo.toml  README.md
crates/weatherman-core/examples/: custom_provider.rs  report.rs
crates/weatherman-core/examples/vhs/: core-demo.tape
crates/weatherman-core/src/: api.rs  forecaster.rs  format.rs  lib.rs  location.rs  persistence.rs  presentation.rs
crates/weatherman-core/tests/: format_test.rs  mapping_test.rs  persistence_test.rs  presentation_test.rs  types_test.rs
crates/weatherman-gui/: Cargo.toml  README.md
crates/weatherman-gui/examples/vhs/: gui-demo.tape
crates/weatherman-gui/src/: app.rs  lib.rs  main.rs  theme.rs  view.rs
crates/weatherman-tui/: Cargo.toml  README.md
crates/weatherman-tui/examples/vhs/: tui-demo.tape  tui-imperial.tape
crates/weatherman-tui/src/: app.rs  lib.rs  main.rs  view.rs
crates/weatherman-tui/tests/: view_test.rs
scripts/: bump_version.nu  check_publish.nu  migrate-to-gitea.sh  upgrade_deps.nu  version.nu
scripts/tests/: run_all.nu  runner.nu  test_bump_version.nu  test_check_publish.nu  test_upgrade_deps.nu  test_version.nu
src/modules/: canvas.rs  tui.rs  ui.rs
