[package]
name = "weather_man"
version = "0.2.9"
edition = "2021"
authors = ["Sorin Albu-Irimies <mihaiirimies@gmail.com>"]
description = "A feature-rich Rust-based CLI for weather forecasting with cyberpunk-themed animations"
readme = "README.md"
license = "MIT"
keywords = ["cli", "weather", "forecast", "cyberpunk", "animations"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
console = "0.15"
dialoguer = "0.10"
indicatif = "0.17"
crossterm = "0.28"
rand = "0.9"
url = "2.3"
urlencoding = "2.1"
dirs = "5.0"
strum = "0.26"
strum_macros = "0.26"
ratatui = { version = "0.29", default-features = true }
unicode-width = "0.2"
geo = "0.24"
geocoding = "0.4"
spinners = "4.1"
ctrlc = "3.5"
anyhow = "1.0"
futures = "0.3"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"
mockito = "1.5"
assert_cmd = "2.0"
predicates = "3.1"
