[workspace]
members = [
    "crates/weatherman-core",
    "crates/weatherman-gui",
    "crates/weatherman-tui",
]
resolver = "2"

[workspace.package]
version    = "0.4.0"
edition    = "2021"
authors    = ["Sorin Albu-Irimies <mihaiirimies@gmail.com>"]
license    = "MIT"
repository = "https://github.com/sorinirimies/weather_man"

# ── Shared dependency versions ─────────────────────────────────────────────────
# Pin versions here once; each crate references them with `{ workspace = true }`
# so there is a single source of truth.

[workspace.dependencies]
# Core / shared
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
strum       = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
futures     = "0.3"

# GUI (Iced)
iced = { version = "0.13", features = ["tokio", "canvas", "advanced"] }

# TUI (Ratatui)
ratatui   = "0.29"
crossterm = "0.28"
clap      = { version = "4", features = ["derive"] }

# Internal crates
weatherman-core = { path = "crates/weatherman-core", version = "0.4.0" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"