[package]
name = "weatherman-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "weatherman — terminal weather app (Ratatui TUI) with a single-page current + hourly + 7-day forecast"
readme = "README.md"
categories = ["command-line-utilities", "visualization"]
keywords = ["weather", "forecast", "tui", "ratatui", "terminal"]

[[bin]]
name = "weatherman-tui"
path = "src/main.rs"

[lib]
name = "weatherman_tui"
path = "src/lib.rs"

[dependencies]
weatherman-core = { workspace = true }
anyhow    = { workspace = true }
chrono    = { workspace = true }
serde_json = { workspace = true }
tokio     = { workspace = true }
ratatui   = { workspace = true }
crossterm = { workspace = true }
clap      = { workspace = true }
